# awesome-demo

graphql_demo/: .gitignore  README.md  pom.xml
graphql_demo/docs/: GraphiQL问题分析.md
graphql_demo/src/main/java/com/example/graphql/: GraphQLDemoApplication.java
graphql_demo/src/main/java/com/example/graphql/config/: DataInitializer.java  GraphQLConfig.java
graphql_demo/src/main/java/com/example/graphql/dto/: CreateAuthorInput.java  CreateBookInput.java  UpdateAuthorInput.java  UpdateBookInput.java
graphql_demo/src/main/java/com/example/graphql/entity/: Author.java  Book.java
graphql_demo/src/main/java/com/example/graphql/repository/: AuthorRepository.java  BookRepository.java
graphql_demo/src/main/java/com/example/graphql/resolver/: MutationResolver.java  QueryResolver.java
graphql_demo/src/main/java/com/example/graphql/service/: AuthorService.java  BookService.java
graphql_demo/src/main/resources/: application.yml
graphql_demo/src/main/resources/graphiql/: index.html
graphql_demo/src/main/resources/graphql/: schema.graphqls
grpc_demo/: CMakeLists.txt  README.md  build.sh
grpc_demo/proto/: hello.proto
grpc_demo/scripts/: run_example.sh.in
grpc_demo/src/: client.cpp  server.cpp
nlp_demo/: .gitignore  DEMO.md  MAVEN_JAVA_COMPATIBILITY.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  api-examples.json  pom.xml  start.sh  test-api.sh
nlp_demo/src/main/java/com/nlp/: NlpDemoApplication.java
nlp_demo/src/main/java/com/nlp/config/: NlpConfig.java
nlp_demo/src/main/java/com/nlp/controller/: NlpController.java
nlp_demo/src/main/java/com/nlp/exception/: GlobalExceptionHandler.java
nlp_demo/src/main/java/com/nlp/model/: NlpRequest.java  NlpResponse.java
nlp_demo/src/main/java/com/nlp/service/: NlpService.java
nlp_demo/src/main/resources/: application.yml
plugin_demo/: .gitignore  README.md  build.sh  pom.xml
plugin_demo/complex-plugin/: README.md  pom.xml
plugin_demo/complex-plugin/src/main/java/com/example/plugin/complex/: DataProcessingPlugin.java
plugin_demo/complex-plugin/src/main/resources/: plugin.properties
plugin_demo/main-app/: pom.xml
plugin_demo/main-app/src/main/java/com/example/app/: MainApplication.java
plugin_demo/main-app/src/main/java/com/example/app/controller/: PluginController.java  WebController.java
plugin_demo/main-app/src/main/resources/: application.yml
plugin_demo/main-app/src/main/resources/templates/: plugins.html
plugin_demo/plugin-api/: pom.xml
plugin_demo/sample-plugin/: pom.xml
(+11 files in other folders)
